--- a/test-jasmine/SpecRunner.html
+++ b/test-jasmine/SpecRunner.html
@@ -18,8 +18,10 @@
     <script src="lib/jasmine-5.5.0/boot1.js"></script>
 
     <script src="utils/moneyTest.js" type="module"></script>
-    <script src="data/cartTest.js" type="module"></script>
+    <script src="checkout/orderSummaryTest.js" type="module"></script>
   </head>
 
-  <body></body>
+  <body>
+    <div class="js-container"></div>
+  </body>
 </html>
